--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,22 +10,25 @@ android {
         targetSdkVersion 24
         versionCode 1
         versionName "1.0"
+        jackOptions {
+            enabled true
+            return true
+        }
     }
     //noinspection GroovyAssignabilityCheck
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            return true
         }
     }
     //noinspection GroovyAssignabilityCheck
-    productFlavors {
+    /*productFlavors {
         experimental {
-            jackOptions {
-                enabled true
-            }
+
         }
-    }
+    }*/
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
