Various changes: 1) added RunMapPagerActivity to set of components that exchange messages with BackgroundLocationService; 2) made mRunIdTextView a member variable to fix failure to display RunId before receiving location updates; 3) changed RunFragment to use setRetainInstance(true) instead of trying to save instance state to avoid losing connection  to BackgroundLocationService upon configuration change, thereby stopping location tracking; 4) eliminated redundant toastTextRes initializers in RunFragment; 5) in RunManager, now check for null values in retrieveBounds and retrievePoints; 6) in RunMapFragment, use ArrayList<LatLng> for mPoints instead of List<LatLng>; 7) made member variable for LatLngBuilder in RunMap Fragment; 8) disabled map scrolling to allow easier swiping from one RunMapFragment to another in the ViewPager; 9) check for null mLocationCursor before trying to close it in onStop() in RunMaFragment; 10) added check for change in LatLng value from last previous LatLng before adding to mPoints; 11) added code in RunMapFragment to add StartLocation to mPoints and mBounds if they don't any entries yet; 12) in RunMapFragment changed to using mLastLocation data for setting endMarkerOptions position instead of last entry in mPoints in case mPoints has no entries; 13) moved Polyline initialization to prepareMap() in RunMapFragment; 14) in RunMapFragment added runIdTextView; 15) in RunMapFragment set startDateTextView text from mStartDate to getting a fresh date read of Run fetched from RunManager using mRunId; 16) added RunMapPagerActivity; 17) in RunPager Activity cleaned up switch statement in setupAdapterAndLoader(); 18) added activity_run_map_pager.xml; 19) in fragment_run.xml, added TextViews for display of RunId; 19) in map_activity_fragment.xml changed formatting of LinearLayout element; 20) added run_map_pager_options.xml; 21) in AndroidManifest.xml changed ".RunMapActivity" to ".RunMapPagerActivity"; 22) in build.gradle, updated classpath for build:

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,7 +52,7 @@
                 android:value="com.dknutsonlaw.android.runtracker2.RunRecyclerListActivity"/>
         </activity>
         <activity
-            android:name=".RunMapActivity"
+            android:name=".RunMapPagerActivity"
             android:label="RunTracker2"
             android:parentActivityName=".RunPagerActivity">
             <meta-data
