--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,19 +1,15 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion '25.0.0'
+    compileSdkVersion 26
+    buildToolsVersion '26.0.1'
     //noinspection GroovyAssignabilityCheck
     defaultConfig {
         applicationId "com.dknutsonlaw.android.runtracker2"
         minSdkVersion 17
-        targetSdkVersion 25
+        targetSdkVersion 26
         versionCode 1
         versionName "1.0"
-        jackOptions {
-            enabled true
-            return true
-        }
     }
     //noinspection GroovyAssignabilityCheck
     buildTypes {
@@ -30,23 +26,27 @@ android {
         }
     }*/
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        android.compileOptions.sourceCompatibility 1.8
+        android.compileOptions.targetCompatibility 1.8
+    }
+    productFlavors {
     }
 }
 
 //noinspection GroovyAssignabilityCheck
 dependencies {
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.android.support:design:26.0.1'
     compile fileTree(include: ['*.jar'], dir: 'libs')
     //noinspection GradleCompatible
     //noinspection GradleCompatible,GradleCompatible
     //compile 'com.google.android.gms:play-services:9.2.1'
-    compile 'com.android.support:support-v4:25.0.1'
+    compile 'com.android.support:support-v4:26.0.1'
     //noinspection GradleCompatible,GradleCompatible
-    compile 'com.android.support:appcompat-v7:25.0.1'
-    compile 'com.android.support:recyclerview-v7:25.0.1'
-    compile 'com.google.android.gms:play-services-location:10.0.1'
-    compile 'com.google.android.gms:play-services-maps:10.0.1'
+    compile 'com.android.support:appcompat-v7:26.0.1'
+    compile 'com.android.support:recyclerview-v7:26.0.1'
+    compile 'com.google.android.gms:play-services-location:11.2.0'
+    compile 'com.google.android.gms:play-services-maps:11.2.0'
     compile 'junit:junit:4.12'
     compile 'com.bignerdranch.android:recyclerview-multiselect:0.2'
 }
