--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,9 +26,11 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:name=".RunTracker2"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
         tools:ignore="AllowBackup,GoogleAppIndexingWarning">
+    <!--    android:theme="@style/AppTheme" -->
+
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version"
@@ -50,6 +52,11 @@
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.dknutsonlaw.android.runtracker2.RunRecyclerListActivity"/>
+        </activity>
+        <activity
+            android:name=".DialogActivity"
+            android:label="RunTracker2"
+            android:theme="@android:style/Theme.Dialog">
         </activity>
 
         <receiver
@@ -80,6 +87,10 @@
                   android:exported="false">
         </receiver>
         -->
+        <activity
+            android:name=".HeadlessActivity"
+            android:label="@string/title_activity_headless">
+        </activity>
     </application>
 
 </manifest>
