--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,14 +23,13 @@
         android:required="true"/>
 
     <application
+        android:name=".RunTracker2"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:name=".RunTracker2"
         android:supportsRtl="true"
+        android:theme="@style/AppTheme"
         tools:ignore="AllowBackup,GoogleAppIndexingWarning">
-    <!--    android:theme="@style/AppTheme" -->
-
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version"
@@ -91,6 +90,7 @@
             android:name=".HeadlessActivity"
             android:label="@string/title_activity_headless">
         </activity>
+
     </application>
 
 </manifest>
