--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -63,7 +63,9 @@
             android:enabled="true"
             android:exported="false">
             <intent-filter>
-                <action android:name="com.dknutsonlaw.android.runtracker2.ACTION_LOCATION"/>
+                <action
+                    android:name="com.dknutsonlaw.android.runtracker2.ACTION_LOCATION"
+                    android:enabled="true"/>
             </intent-filter>
         </receiver>
 
@@ -80,12 +82,6 @@
             android:enabled="true"
             android:exported="false">
         </service>
-        <!--
-        <receiver android:name=".BackgroundLocationService$ConnectionResolutionResultsReceiver"
-                  android:enabled="true"
-                  android:exported="false">
-        </receiver>
-        -->
         <activity
             android:name=".HeadlessActivity"
             android:label="@string/title_activity_headless">
