--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,7 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:26.1.0'
     compile 'com.google.android.gms:play-services-location:11.4.2'
     compile 'com.google.android.gms:play-services-maps:11.4.2'
+    //noinspection GradleDynamicVersion
     compile 'com.google.maps.android:android-maps-utils:0.5+'
     compile 'junit:junit:4.12'
     compile 'com.bignerdranch.android:recyclerview-multiselect:0.2'
